--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <ul id="categories">
+  <!-- <ul id="categories">
     <li class="item">
       <h2>Животные</h2>
 
@@ -38,9 +39,13 @@
       </ul>
     </li>
   </ul>
-  <ul id="ingredients"></ul>
+  <ul id="ingredients"></ul> -->
+
+  <ul id="gallery"></ul>
+
 
   <!-- <script src="./task-1.js" type="module"></script> -->
-  <script src="./task-2.js" type="module"></script>
+  <!-- <script src="./task-2.js" type="module"></script> -->
+  <script src="./task-3.js" type="module"></script>
 </body>
 </html>
