--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>hw 7</title>
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -46,6 +46,7 @@
 
   <!-- <script src="./task-1.js" type="module"></script> -->
   <!-- <script src="./task-2.js" type="module"></script> -->
-  <script src="./task-3.js" type="module"></script>
+  <!-- <script src="./task-3.js" type="module"></script> -->
+  <script src="./task-4.js" type="module"></script>
 </body>
 </html>
