--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>hw 7</title>
-  <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-  <!-- <ul id="categories">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>hw 7</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <!-- <ul id="categories">
     <li class="item">
       <h2>Животные</h2>
 
@@ -41,12 +41,20 @@
   </ul>
   <ul id="ingredients"></ul> -->
 
-  <ul id="gallery"></ul>
+    <!-- <ul id="gallery"></ul> -->
 
+    <!-- <div id="counter">
+    <button type="button" data-action="decrement">-1</button>
+    <span id="value">0</span>
+    <button type="button" data-action="increment">+1</button>
+  </div> -->
 
-  <!-- <script src="./task-1.js" type="module"></script> -->
-  <!-- <script src="./task-2.js" type="module"></script> -->
-  <!-- <script src="./task-3.js" type="module"></script> -->
-  <script src="./task-4.js" type="module"></script>
-</body>
+    <input type="text" placeholder="Ваше имя?" id="name-input" />
+    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+
+    <!-- <script src="./task-1.js" type="module"></script> -->
+    <!-- <script src="./task-2.js" type="module"></script> -->
+    <!-- <script src="./task-3.js" type="module"></script> -->
+    <script src="./task-4.js" type="module"></script>
+  </body>
 </html>
