--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 
     <!-- <input type="text" placeholder="Ваше имя?" id="name-input" />
     <h1>Привет, <span id="name-output">незнакомец</span>!</h1> -->
-    <input
+    <!-- <input
   type="text"
   id="validation-input"
   data-length="6"
   placeholder="Введи 6 символов"
-/>
+/> -->
 
 <input id="font-size-control" type="range" />
 <br />
@@ -67,6 +67,7 @@
     <!-- <script src="./task-3.js" type="module"></script> -->
     <!-- <script src="./task-4.js" type="module"></script> -->
     <!-- <script src="./task-5.js" type="module"></script> -->
-    <script src="./task-6.js" type="module"></script>
+    <!-- <script src="./task-6.js" type="module"></script> -->
+    <script src="./task-7.js" type="module"></script>
   </body>
 </html>
